update fix messagerie
First step
Not responsive

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,6 +32,7 @@ html {
 body {
     margin: 0;
     font-family: $primary-font;
+    color: $base-color-1;
 
     .map-bg {
         position: relative;
@@ -43,7 +44,8 @@ body {
     }
 
     .landing-page,
-    .profil {
+    .profil,
+    .messagerie {
         position: absolute;
 
         &__layout {
